ci: add-opens to pom.xml